complete game with upgrades

--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 </head>
 <body>
 	<h1>The Psychic Game</h1>
-	<p>Guess what letter I'm thinking of</p>
+	<p>Guess what letter I'm thinking of!</p>
+	<h4 id="notification" style="color:red"></h4>
 	<p id="wins">Wins: 0</p>
 	<p id="losses">Losses: 0</p>
 	<p id="guessesLeft">Guesses Left: 9</p>
 	<p id="guessesSoFar">Your Guesses So Far:</p>
 
-
-	<p id="test"></p>
 
 	
 
